--- a/apigateway/pom.xml
+++ b/apigateway/pom.xml
@@ -21,7 +21,11 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
             <version>4.0.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+            <version>2.5.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
