--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
 springdoc:
   swagger-ui:
-    use-root-path: true
+    path: /swagger-ui.html
 
 ---
 # ===================================================================
