cambios para swagger-ui

--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -48,4 +48,4 @@ springdoc:
   swagger-ui:
     urls:
       - name: Servicio de Guías
-        url: /v3/api-docs/guias_route_prod
+        url: /v3/api-docs/guias_route_prod # 
